# legal_document

./: .env.example  README.md  execute.md  graph.py  llm.py  main.py  nodes.py  plan.md  pyproject.toml  state.py  visualize_graph.py
output/: legal_document.md
